--- a/web/src/index.css
+++ b/web/src/index.css
@@ -106,7 +106,7 @@ body {
   }
   
   footer{
-    padding-top: 30px;
+    padding-top: 50px;
     text-align: center;
   }
 
@@ -114,4 +114,10 @@ body {
     text-align: center;
     
     padding-bottom: 8px;
+  }
+
+  .CategoryFilter{
+    box-sizing: border-box;
+    margin-bottom: 20px;
+    display: inline-block;
   }
