--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,136 +1,164 @@
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  p {
-    font-size: 1.1rem;
-  }
-  
-  nav {
-    display: flex;
-    padding: 2rem 0;
-    background: #111;
-  }
-  
-  nav section {
-    width: 100%;
-  }
-  
-  nav a {
-    font-weight: 700;
-    padding: 1rem 1.5rem;
-    border-radius: 4px;
-  }
-  
-  nav a:first-of-type {
-    margin-left: -1.5rem;
-  }
-  
-  nav a:hover {
-    background: #222;
-  }
-  
-  a {
-    color: #ea3546;
-    text-decoration: none;
-  }
-  
-  section {
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0 1.5rem;
-  }
-  
-  section h1 {
-    font-size: 3rem;
-  }
-  
-  input, select, textarea {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
-  textarea {
-    width: 100%;
-    height: 150px;
-    padding: 12px 20px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    background-color: #f8f8f8;
-    resize: none;
-  }
+p {
+  font-size: 1.1rem;
+}
 
-  .question h2 {
-    font-size: 2.5rem;
-  }
-  
-  .question-excerpt {
-    padding: 1.5rem 0;
-    border-bottom: 1px solid #eee;
-  }
-  
-  .question-excerpt:first-of-type {
-    padding-top: 0;
-  }
-  
-  .question-excerpt h2 {
-    margin-top: 0;
-    font-size: 1.5rem;
-  }
-  
-  .answer {
-    background: #f0f0f0;
-    border-radius: 4px;
-    padding: 1rem 1.5rem;
-    margin: 1rem 0;
-  }
-  
-  .button {
-    display: inline-block;
-    background: #ea3546;
-    color: white;
-    border-radius: 4px;
-    font-weight: 700;
-    padding: 0.75rem 1.5rem;
-  }
+nav {
+  display: flex;
+  padding: 2rem 0;
+  background: #111;
+}
 
-  .right {
-    float: right;
-  }
-  
-  footer{
-    padding-top: 50px;
-    text-align: center;
-  }
+nav section {
+  width: 100%;
+}
 
-  footer p{
-    text-align: center;
-    
-    padding-bottom: 8px;
-  }
+nav a {
+  font-weight: 700;
+  padding: 1rem 1.5rem;
+  border-radius: 4px;
+}
 
-  #filterCategory{
-    display: flex;
-    padding: 2rem 0;
-    background: transparent;
-  }
+nav a:first-of-type {
+  margin-left: -1.5rem;
+}
 
+nav a:hover {
+  background: #222;
+}
+
+a {
+  color: #ea3546;
+  text-decoration: none;
+}
+
+section {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 1.5rem;
+}
+
+section h1 {
+  font-size: 3rem;
+}
+
+input,
+select,
+textarea {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+textarea {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
+}
+
+.question{
+  padding: 1.5rem 0;
+  display: grid;
+grid-template-columns: 0.2fr 1fr;
+grid-template-rows: 1fr;
+grid-column-gap: 0px;
+grid-row-gap: 0px;
+}
+
+.question h2 {
+  font-size: 2.5rem;
+}
+
+.question-excerpt {
+  padding: 1.5rem 0;
+  border-bottom: 1px solid #eee;
+  display: grid;
+  grid-template-columns: 0.2fr 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  vertical-align: middle;
+}
+
+.question-excerpt:first-of-type {
+  padding-top: 0;
+}
+
+.question-excerpt h2 {
+  margin-top: 0;
+  font-size: 1.5rem;
+}
+
+.answer {
+  background: #f0f0f0;
+  border-radius: 4px;
+  padding: 1rem 1.5rem;
+  margin: 1rem 0;
+  display: grid;
+  grid-template-columns: 0.2fr 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.photo{
+  grid-area: 1 / 1 / 2 / 3; 
+}
+
+.content{
+  grid-area: 1 / 2 / 2 / 3; 
+}
+
+.button {
+  display: inline-block;
+  background: #ea3546;
+  color: white;
+  border-radius: 4px;
+  font-weight: 700;
+  padding: 0.75rem 1.5rem;
+}
+
+.right {
+  float: right;
+}
+
+footer {
+  padding-top: 50px;
+  text-align: center;
+}
+
+footer p {
+  text-align: center;
+
+  padding-bottom: 8px;
+}
+
+#filterCategory {
+  display: flex;
+  padding: 2rem 0;
+  background: transparent;
+}
 
 ul {
-    
 }
 
 ul li {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-hr{
-    border-top: 1px solid rgba(56, 56, 56, 0.753);
+hr {
+  border-top: 1px solid rgba(56, 56, 56, 0.753);
 }
